# gen-ai-gl

./: .gitignore  README.md  pyproject.toml
apps/: main.py  pyproject.toml
apps/audio_to_text/: start.py
apps/audio_to_text/cli/: cli.py
apps/audio_to_text/config/: language_map.json
apps/audio_to_text/services/: model_loader.py
apps/audio_to_text/ui/: audio_upload_ui.py  export_ui.py  microphone_ui.py  transcription_ui.py
apps/audo_to_text/: README.md  main.py  pyproject.toml  start.py
apps/audo_to_text/cli/: cli.py
apps/audo_to_text/services/: audio_transcriber.py
apps/audo_to_text/ui/: audio_upload_ui.py  export_ui.py  microphone_ui.py  transcription_ui.py
apps/image_to_text/: main.py
apps/learning_assistant/: start.py
apps/learning_assistant/ui/: main_ui.py
apps/transformers/: main.py
apps/utils/: file_helper.py  ui_helper.py
src/audo_to_text/: README.md  app.py  mic_test.py
src/audo_to_text/cli/: cli.py
src/audo_to_text/config/: language_map.json
src/audo_to_text/services/: audio_transcriber.py  model_loader.py  speech_transcriber.py  transcriber.py
src/audo_to_text/ui/: audio_upload_ui.py  main_ui.py  microphone_ui.py  transcription_ui.py  web.py
src/audo_to_text/utils/: audio_buffer.py  file_helper.py
src/ui/: image_generation.py  open_ai_practice.py
transcriptions/: upload_transcription.txt
