[project]
name = "gen-ai-gl"
version = "0.1.0"
description = "Gen AI Practice"
authors = [
    {name = "diliplakshya@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "transformers (>=4.57.1,<5.0.0)",
    "torch (>=2.9.0,<3.0.0)",
    "openai (>=2.8.1,<3.0.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "accelerate (>=1.11.0,<2.0.0)",
    "streamlit-webrtc (>=0.64.0,<0.65.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "openai-whisper (>=20250625,<20250626)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"